add featue update and cancle DO for planner
